--- a/home.html
+++ b/home.html
@@ -454,7 +454,7 @@
             <img src="https://cdn1.iconfinder.com/data/icons/agriculture-and-farming-30/85/shovel_gardening_tool_farm_agriculture-512.png" alt="">
            </div>
             <div class="land">
-            <p>Agriculture Garden & Landscape</p>
+            <a href="./product.html" style="text-decoration: none; color:black;"><p>Agriculture Garden & Landscape</p></a>
             </div>
             <div class="garden-content">
                 <p>Grain Processing Machine</p>
@@ -930,7 +930,7 @@
                     
                     <p>Rs. 19,800</p>
                     <p>-----------------</p>
-                    <button class="p1" onclick="addToCart()">ADD TO CART</button>
+                    <button class="p1" >ADD TO CART</button>
                     <button class="p2">BUY NOW</button>
                 </div>
             </div>
@@ -941,7 +941,7 @@
                     
                     <p>Rs. 19,999</p>
                     <p>-----------------</p>
-                    <button class="p1" onclick="addToCart()">ADD TO CART</button>
+                    <button class="p1" >ADD TO CART</button>
                     <button class="p2">BUY NOW</button>
                 </div>
             </div>
